--- a/Python_Tutorials/Chapter_6_if_statements.ipynb
+++ b/Python_Tutorials/Chapter_6_if_statements.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNiVvWZOPBT0Es5zetCOZXJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/dchappell2/Computational-Physics/blob/main/Python_Tutorials/Chapter_6_if_statements.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Reiniery/Computational-Physics/blob/main/Python_Tutorials/Chapter_6_if_statements.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -188,16 +187,29 @@
         "    print(temp,'is too cold!!')"
       ],
       "metadata": {
-        "id": "i0Ej2aekYtGH"
+        "id": "i0Ej2aekYtGH",
+        "outputId": "2d79b04e-662f-4437-a8c2-5b5959ebfcad",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a temperature in F:  100\n",
+            "100 is chilly\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "source": [
         "\n",
-        "🟩"
+        "🟩 This code is broken becasue of the greater than symbol. If i input a value greater than 40, it will satisfy that cindition and print it is chilly. However, if i were to put 60, the first condition is still satisifes, so it automatically skips the other conditions. The conditions need to first check if it is 90, then 70, then 40 to get the correct outputs\n"
       ],
       "metadata": {
         "id": "jPObF85tJ1G0"
@@ -229,7 +241,7 @@
       "metadata": {
         "id": "9o4BZNiZdxyq"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -251,7 +263,7 @@
       "metadata": {
         "id": "9CLVvt3ZhDhB"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -269,10 +281,25 @@
         "2 > 1"
       ],
       "metadata": {
-        "id": "lh8nJhmljZVH"
+        "id": "lh8nJhmljZVH",
+        "outputId": "32ae3cdd-88c9-4157-d1e5-d1bc2f4feedf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -289,10 +316,25 @@
         "(1>2) or (2<3)"
       ],
       "metadata": {
-        "id": "d5kknPJhjg0m"
+        "id": "d5kknPJhjg0m",
+        "outputId": "b1bef077-5103-4be4-cb8e-cb2a64671c20",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -309,10 +351,25 @@
         "not (1<2)"
       ],
       "metadata": {
-        "id": "ZUitKHlkjyub"
+        "id": "ZUitKHlkjyub",
+        "outputId": "670f28ea-51dc-46ef-de3c-d46829401e80",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -342,10 +399,25 @@
         "    print(\"fourth condition is true\")\n"
       ],
       "metadata": {
-        "id": "2JWa3Ab-iRUz"
+        "id": "2JWa3Ab-iRUz",
+        "outputId": "36c49871-6568-4588-f0bd-d81950682ce4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "first condition is true\n",
+            "second condition is true\n",
+            "third condition is true\n",
+            "fourth condition is true\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -372,6 +444,16 @@
     {
       "cell_type": "markdown",
       "source": [
+        "True, True, True\n",
+        ",False"
+      ],
+      "metadata": {
+        "id": "ZbQavhP5to0A"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### ✅ Skill Check 3\n",
         "\n",
         "Classify a number.\n",
@@ -383,6 +465,40 @@
       "metadata": {
         "id": "UZSPe10G7fHA"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num = float(input('Enter a Number: '))\n",
+        "\n",
+        "if num - int(num)==0:\n",
+        "    print('Number is an Integer')\n",
+        "\n",
+        "    if num%2==0:\n",
+        "        print('Number is even')\n",
+        "    else: print('Number is Odd')\n",
+        "else: print('FLoat, Number has Nonzero decimal places')\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "FmP64-C8tzlf",
+        "outputId": "362479c6-8fa5-4a5e-eb4b-e4ea3ae53ee8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a Number: 11\n",
+            "Number is an Integer\n",
+            "Number is Odd\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -408,13 +524,48 @@
       "cell_type": "code",
       "source": [
         "x = [2, -4, -2, -5, 1, -6,  3, -2]\n",
-        "y = [8,  2,  0,  4, 9, -3, -3,  0]"
+        "y = [8,  2,  0,  4, 9, -3, -3,  0]\n",
+        "\n",
+        "for i in range(len(x)):\n",
+        "    print(f'{x[i],y[i]}', end= \" \")\n",
+        "    if x[i]==0: print('X axis')\n",
+        "    elif y[i]==0: print('Y axis')\n",
+        "\n",
+        "    #quadrant 1\n",
+        "    if x[i]>0 and y[i]>0:print('Quadrant I')\n",
+        "    #q2\n",
+        "    if x[i]<0 and y[i]>0:print('Quadrant II')\n",
+        "    #q3\n",
+        "    if x[i]<0 and y[i]<0:print('Quadrant III')\n",
+        "\n",
+        "    #Quadrant 4\n",
+        "    elif x[i]>0 and y[i]<0: print('Quadrant IV')\n",
+        "\n"
       ],
       "metadata": {
-        "id": "Rzul0XEVxBc_"
+        "id": "Rzul0XEVxBc_",
+        "outputId": "4006ef3b-8f9b-4b0f-c913-50a417473387",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(2, 8) Quadrant I\n",
+            "(-4, 2) Quadrant II\n",
+            "(-2, 0) Y axis\n",
+            "(-5, 4) Quadrant II\n",
+            "(1, 9) Quadrant I\n",
+            "(-6, -3) Quadrant III\n",
+            "(3, -3) Quadrant IV\n",
+            "(-2, 0) Y axis\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -464,10 +615,22 @@
         "print(\"maximum value = \", max_v)   # print out the max value in the list\n"
       ],
       "metadata": {
-        "id": "NOj_1z9D1Y3i"
+        "id": "NOj_1z9D1Y3i",
+        "outputId": "fa82c102-aff8-4e64-8896-90c6928d855f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "maximum value =  27\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -499,10 +662,26 @@
         "    print(\"diff = \",diff)        # display difference\n"
       ],
       "metadata": {
-        "id": "yZPN_6GI1ZDM"
+        "id": "yZPN_6GI1ZDM",
+        "outputId": "6c6f7888-fa3c-4226-aa88-8887bc4cb6a2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "diff =  1\n",
+            "diff =  4\n",
+            "diff =  -1\n",
+            "diff =  -2\n",
+            "diff =  -2\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -535,10 +714,22 @@
         "\n"
       ],
       "metadata": {
-        "id": "H4ZlouxN4gnl"
+        "id": "H4ZlouxN4gnl",
+        "outputId": "eb254f6b-ca19-43fe-c6f2-0ff3420dd07f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4  people in the list own at least 3 cats\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -553,6 +744,39 @@
       "metadata": {
         "id": "o13qshwhFybF"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "even=0\n",
+        "for i in range(5):\n",
+        "    num = int(input('Enter an integer: '))\n",
+        "    if num%2==0: even+=1\n",
+        "print('Number of Even Numbers Inputted: ', even)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "lSZYEDAuwmrW",
+        "outputId": "e9ee7897-2ca8-4ae6-ae99-7e26e3ab6327",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter an integer: 1\n",
+            "Enter an integer: 2\n",
+            "Enter an integer: 3\n",
+            "Enter an integer: 4\n",
+            "Enter an integer: 5\n",
+            "Number of Even Numbers Inputted:  2\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -587,10 +811,22 @@
         "    print(\"numbers list does not contain\",target)"
       ],
       "metadata": {
-        "id": "FK_Bifl6_O9y"
+        "id": "FK_Bifl6_O9y",
+        "outputId": "417a1317-afe1-49f4-ba47-d66157725be7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "numbers list contains 15\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -626,13 +862,35 @@
       "cell_type": "code",
       "source": [
         "y = [0, 0.2, 0.5, 1.2, 2.4, 2.0, 0.4, 0.1, 0.2, 0.7, 1.3, 0.9, 0.2]   # y measurements\n",
-        "t = [0,   1,   2,   3,   4,   5,   6,   7,   8,   9,  10,  11,  12]   # times"
+        "t = [0,   1,   2,   3,   4,   5,   6,   7,   8,   9,  10,  11,  12]   # times\n",
+        "num_peak=0\n",
+        "for i in range(1, len(y)-1):\n",
+        "    if(y[i]>=y[i+1]and y[i]>= y[i-1]):\n",
+        "        num_peak+=1\n",
+        "        print('local peak @ t=', t[i],',', y[i])\n",
+        "\n",
+        "print('Total Num of Peaks ',num_peak )\n",
+        "\n"
       ],
       "metadata": {
-        "id": "9O4pVAgciKCO"
+        "id": "9O4pVAgciKCO",
+        "outputId": "fc6d8d18-a424-4d1e-dc73-f4bbaf15c19e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "local peak @ t= 4 , 2.4\n",
+            "local peak @ t= 10 , 1.3\n",
+            "Total Num of Peaks  2\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -650,6 +908,50 @@
       "metadata": {
         "id": "8mJTc731fcfh"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "\n",
+        "random_int = random.randint(1, 100)\n",
+        "print(random_int)\n",
+        "guess=int(input('Choose a number 1- 100: '))\n",
+        "i=1\n",
+        "first_guess=True\n",
+        "while(guess!=random_int):\n",
+        "    i+=1\n",
+        "\n",
+        "    old_guess=guess\n",
+        "    guess=int(input('Choose a number 1- 100: '))\n",
+        "    if i>1:\n",
+        "        if(guess == random_int): break\n",
+        "        elif guess== old_guess: print(\"Neither warmer nor colder\")\n",
+        "        elif abs(random_int - old_guess) > abs(random_int-guess):print(\"Warmer\")\n",
+        "\n",
+        "        else:print('Cold')\n",
+        "\n",
+        "\n",
+        "\n",
+        "print('You guessed it in ', i, ' guesses!')"
+      ],
+      "metadata": {
+        "id": "-3amtFMYymYJ",
+        "outputId": "d9e834ee-3bca-49c3-e1c2-dc9d3dd2b922",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "6\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
