--- a/ode/ode_3.ipynb
+++ b/ode/ode_3.ipynb
@@ -75,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 1,
       "metadata": {
         "id": "IXsnKAPWH_RX"
       },
@@ -124,7 +124,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 2,
       "metadata": {
         "id": "gbYPgJSDtPYI"
       },
@@ -188,7 +188,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 3,
       "metadata": {
         "id": "OFFMWn0vubwz"
       },
@@ -254,13 +254,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 472
         },
-        "outputId": "33736efa-6abe-412a-a30d-8e4e901ae616",
+        "outputId": "bade1ee2-8f21-4c83-e2a3-7b3333baea3d",
         "id": "X0psqQG3vxXo"
       },
       "outputs": [
@@ -354,7 +354,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": 5,
       "metadata": {
         "id": "o81f2x9X3TLt"
       },
@@ -408,13 +408,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 472
         },
-        "outputId": "fb1f6977-b413-4e8b-8fa7-421239812c8d",
+        "outputId": "fff1f916-0276-4a25-cb86-d07e9db48906",
         "id": "nEoWw_Kmoexb"
       },
       "outputs": [
@@ -499,7 +499,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 7,
       "metadata": {
         "id": "zZuVfYyXM9GZ"
       },
@@ -545,13 +545,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 472
         },
-        "outputId": "19616fb8-8e45-4b64-aafe-0ae8b2836467",
+        "outputId": "63f6ffc8-4a86-4f1a-a648-dda8032ca3d5",
         "id": "QBrr1_5Bp5XC"
       },
       "outputs": [
@@ -635,10 +635,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 116,
+      "execution_count": 9,
       "metadata": {
         "id": "LAq-lzBiRtgC",
-        "outputId": "cb19f0f1-fbb4-4a67-94ca-197b0d772209",
+        "outputId": "705b68bc-e9ba-407f-b494-82f8fa679983",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -5656,11 +5656,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.legend.Legend at 0x7e0c38bd6cc0>"
+              "<matplotlib.legend.Legend at 0x7c2580c88b90>"
             ]
           },
           "metadata": {},
-          "execution_count": 116
+          "execution_count": 9
         },
         {
           "output_type": "display_data",
@@ -5702,9 +5702,6 @@
         "\n",
         "\n",
         "\n",
-        "y_true=-g/L*np.sin(phi*t)\n",
-        "print(y_true.shape)\n",
-        "print(t.shape)\n",
         "\n",
         "plt.plot(t,y,label='rk4')\n",
         "plt.plot(t,y_true,label='true')\n",
