--- a/projects/P2_Heat_Equation.ipynb
+++ b/projects/P2_Heat_Equation.ipynb
@@ -584,6 +584,19 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Reflection\n",
+        "\n",
+        "I used ChatGPT like a partner by communicating my thoughts, asking it to review my code for any errors, and having it explain concepts to me when I felt confused. ChatGPt was very helpful when developing the code step by step. For someone who is first learning something, AI can help along the process, reassuring that you are taken the correct steps. If you already know what to expect, AI can speed up the time it takes to get results. Knowing how to use AI is important. When I first asked AI for the code, I felt confused and overhwelmed by the graphs and information it outputted. But after working on it myself, I have an understanding of the code and know what to expect.\n",
+        "\n",
+        "AI isn't always perfect. Sometimes it struggles to identify errors or explain very advanced topics. Having domain knowledge can help determine if the output is good. For example, at some point my code produced Neumann-boundry plots even though I though I had set Dirichlet conditiona all 4 sides. I had accidentally reused a variable name from an earlier code block. When I asked ChatGPt why the plots were wrong, it didn't catch that the variable I was using had never been defined in the updated block. AI can be helpful, but it is not perfect. It is important to use AI as a tool and not rely on it to do 100% of the work."
+      ],
+      "metadata": {
+        "id": "gi8Wn21pfVih"
+      }
     }
   ]
 }
