--- a/projects/P2_Heat_Equation.ipynb
+++ b/projects/P2_Heat_Equation.ipynb
@@ -325,7 +325,7 @@
       "source": [
         "# Reflection on Chatgpt code:\n",
         "\n",
-        "I gave ChatGPT the prompt on 3 different times. On the first day, ChatGPT did not give me the code. It outputted a set of graphs that look like the ones above. The second time, it gave me fully working code, however, it was organized into functions. This last time, it produced the code above, which was the easiest to understand.\n",
+        "I gave ChatGPT the prompt 2 different times. On the first day, ChatGPT did not give me the code. It outputted a set of graphs that look like the ones above. I then asked it for the code, which ened up being very modular and confusing to me. The next day, I asked it again and produced the code above.\n",
         "\n",
         "Takeaway: Chatgpt isn't always consistant with its method. However, in this scenario, it produced the results asked for in the prompt\n",
         "\n"
