--- a/projects/P2_Heat_Equation.ipynb
+++ b/projects/P2_Heat_Equation.ipynb
@@ -589,8 +589,11 @@
       "cell_type": "markdown",
       "source": [
         "# Reflection\n",
+        "The heat equation shows how temperature evolves in a material. From the plots, we see that heat flows from high temperature regions to low temperature regions. When a Direchlet boundry is used on all 4 sides, heat is lost, casuing a X loohing heat map. When we use a Neumann boundry, it acts as an insualtor, so no heat is lost.\n",
         "\n",
         "I used ChatGPT like a partner by communicating my thoughts, asking it to review my code for any errors, and having it explain concepts to me when I felt confused. ChatGPt was very helpful when developing the code step by step. For someone who is first learning something, AI can help along the process, reassuring that you are taken the correct steps. If you already know what to expect, AI can speed up the time it takes to get results. Knowing how to use AI is important. When I first asked AI for the code, I felt confused and overhwelmed by the graphs and information it outputted. But after working on it myself, I have an understanding of the code and know what to expect.\n",
+        "\n",
+        "Additionally, AI can be a great tool to finding optimized code. When comparing my code vs AI, AI's code was able to generate the plots much quicker than scikit learn's solve_ivp function. Now that I know what is going on, I can transition to that code to produce plots faster.\n",
         "\n",
         "AI isn't always perfect. Sometimes it struggles to identify errors or explain very advanced topics. Having domain knowledge can help determine if the output is good. For example, at some point my code produced Neumann-boundry plots even though I though I had set Dirichlet conditiona all 4 sides. I had accidentally reused a variable name from an earlier code block. When I asked ChatGPt why the plots were wrong, it didn't catch that the variable I was using had never been defined in the updated block. AI can be helpful, but it is not perfect. It is important to use AI as a tool and not rely on it to do 100% of the work."
       ],
